# aiida-yambo

./: pyproject.toml
.github/workflows/: install_codes.yml
aiida_yambo/calculations/: yambo.py  ypp.py
aiida_yambo/parsers/: parsers.py
aiida_yambo/workflows/: yamboconvergence.py  yambowf.py
docs/: mkdocs.yml
docs/docs/user_guide/: index.md
docs/source/: index.md
docs/source/stylesheets/: custom.css
docs/source/user_guide/: index.md
docs/source/user_guide/installation/: index.md
